--- a/githubProfile/index.html
+++ b/githubProfile/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://th.bing.com/th/id/OIP.aW_9FRvnNpi0Wlgv3XSlwQAAAA?rs=1&pid=ImgDetMain" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Github Search</title>
   </head>
   <body>
     <div id="root"></div>
